LibrariesNode shows module patches.